# Project name: Eciton.
# Description: Experimental exokernel.
# Licence: GPL-3.0.
# Author: Alexander (@alkuzin).

# Project package info section.
[package]
name    = "eciton"
version = "0.0.1"
edition = "2024"

# Project library settings section.
[lib]
# Compile project to a static library.
crate-type = ["staticlib"]

# Development profile configuration section.
[profile.dev]
# Abort immediately instead of unwinding on panic.
panic = "abort"

# Release profile configuration section.
[profile.release]
# Abort immediately instead of unwinding on panic.
panic = "abort"

# Project dependencies section.
[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
spin        = "0.10.0"

# Project features section.
[features]
# Eciton exokernel custom testing framework feature.
exotest = []