# SPDX-License-Identifier: GPL-3.0-or-later
# Date: 2025-06-13
# Author:Alexander Kuzin <alkuzindev@gmail.com>.

# Project package info section.
[package]
name        = "eciton"
description = "Modular microkernel operating system"
version     = "0.1.0"
authors     = ["Alexander Kuzin <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/eciton"
license     = "GPL-3"
edition     = "2024"

# Project library settings section.
[lib]
# Compile project to a static library.
crate-type = ["staticlib"]

# Development profile configuration section.
[profile.dev]
# Abort immediately instead of unwinding on panic.
panic = "abort"

# Release profile configuration section.
[profile.release]
# Abort immediately instead of unwinding on panic.
panic = "abort"

# Project dependencies section.
[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
spin        = "0.10.0"

# Project features section.
[features]
# Kernel custom testing framework feature.
ktest = []