[package]
name    = "eciton"
version = "0.0.0"
edition = "2024"

[build-dependencies]
bootloader = "0.11.10"
kernel     = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]

# Workspace is a collection of one or more related Rust crates
# that can share dependencies and build settings.
[workspace]
members = ["kernel"]