[package]
name    = "eciton"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
spin = "0.9.8"
exo  = { path = "../exo" }
ecos = { path = "../ecos" }